gcc/testsuite/gcc.dg/funcdef-storage-1.c
/* { dg-do compile } */
/* { dg-options "" } */

void
flarm(void)
{
  static void foo();  /* { dg-error "invalid storage class" } */

  foo();
}

static void
foo(void)
{
}
